[project]
name = "21-2"
version = "0.1.0"
description = ""
authors = [
    {name = "yuzhakov",email = "yuzhakov.a.a@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "21"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
